--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 body {
   font-family: "Jost", sans-serif;
   background: #493284;
-  background-image: url("https://asideofdrag.com/images/BGGradient.png");
+  background-image: url("https://asideofdrag.com/images/VanieBG.png");
   background-repeat: repeat-y repeat-x;
   background-position: center;
   background-attachment: fixed;
