--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
   box-shadow: 0 0 0 8px rgba(255, 255, 255, 0.2);
 }
 
-.card2 {
+.PastBrunch {
   max-width: 400px;
   height: 70px;
   margin: auto;
@@ -39,18 +39,24 @@ body {
   top: 10px;
   z-index: 1;
   background-color: transparent;
+  filter: drop-shadow(10px 15px 2px black);
+}
+
+.deleted {
   transition: 0.3s;
+  border-width: 0px;
   border-radius: 10px;
   box-shadow: 0 0 0 8px rgba(255, 255, 255, 0.2);
 }
 
-.card3 {
+.logo {
   max-width: 400px;
   margin: auto;
   position: relative;
   top: 10px;
   z-index: 1;
   background-color: transparent;
+  filter: drop-shadow(10px 15px 2px black);
 }
 
 .card4 {
@@ -140,9 +146,9 @@ body {
   box-shadow: 0 8px 8px rgba(0, 0, 0, 0.2);
   border-radius: 0%;
   -o-object-position: center;
-     object-position: center;
+  object-position: center;
   -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   position: absolute;
   bottom: 20%;
   left: 58%;
@@ -245,9 +251,9 @@ body {
 .card-buttons button {
   flex: 1 1 auto;
   -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
   background: 0;
   font-size: 13px;
   border: 0;
@@ -260,10 +266,16 @@ body {
   outline: 0;
   border-bottom: 3px solid transparent;
 }
-.card-buttons button.is-active, .card-buttons button:hover {
+.card-buttons button.is-active,
+.card-buttons button:hover {
   color: #2b2c48;
   border-bottom: 3px solid #8a84ff;
-  background: linear-gradient(to bottom, rgba(127, 199, 231, 0) 0%, rgba(207, 204, 255, 0.2) 44%, rgba(211, 226, 255, 0.4) 100%);
+  background: linear-gradient(
+    to bottom,
+    rgba(127, 199, 231, 0) 0%,
+    rgba(207, 204, 255, 0.2) 44%,
+    rgba(211, 226, 255, 0.4) 100%
+  );
 }
 
 .card-section {
@@ -272,7 +284,7 @@ body {
 .card-section.is-active {
   display: block;
   -webkit-animation: fadeIn 0.6s both;
-          animation: fadeIn 0.6s both;
+  animation: fadeIn 0.6s both;
 }
 
 @-webkit-keyframes fadeIn {
@@ -378,7 +390,11 @@ body {
 .contact-me {
   border: 0;
   outline: none;
-  background: linear-gradient(to right, rgba(83, 200, 239, 0.8) 0%, rgba(81, 106, 204, 0.8) 96%);
+  background: linear-gradient(
+    to right,
+    rgba(83, 200, 239, 0.8) 0%,
+    rgba(81, 106, 204, 0.8) 96%
+  );
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.15);
   color: #fff;
   padding: 12px 16px;
