--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ body {
   flex-direction: column;
   border-radius: 10px;
   box-shadow: 0 0 0 8px rgba(255, 255, 255, 0.2);
+    filter: drop-shadow(10px 8px 2px rgba(0,0,0,0.7));
 }
 
 .PastBrunch {
@@ -39,7 +40,7 @@ body {
   top: 10px;
   z-index: 1;
   background-color: transparent;
-  filter: drop-shadow(10px 15px 2px black);
+  filter: drop-shadow(10px 10px 2px rgba(0,0,0,0.6));
 }
 
 .deleted {
@@ -56,7 +57,7 @@ body {
   top: 10px;
   z-index: 1;
   background-color: transparent;
-  filter: drop-shadow(10px 15px 2px black);
+  filter: drop-shadow(10px 8px 2px rgba(0,0,0,0.7));
 }
 
 .card4 {
